# flowshop-neh-based-heuristic-recommendation

./: .gitattributes  .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  NAMESPACE  README.md
R/: RcppExports.R
data/: instances.tar.xz  performances.tar.xz
reports/: 01-generate-instances.R  02-best-solver.R  02-build-performance-data.R  04-build-features-data.R  04-build-models.R  05-evaluate-models.Rmd  report.Rmd
scripts/docker/: Dockerfile  run.sh
src/: RcppExports.cpp  rcpp_hello_world.cpp
src/flowshop-solver/: MHParamsValues.hpp  RunOptions.hpp  eoFSPFactory.hpp  eoFactory.hpp  fla_methods.hpp  heuristics.hpp
src/flowshop-solver/heuristics/: all.hpp
src/flowshop-solver/problems/: FSPProblem.hpp  Problem.hpp
test/: CMakeLists.txt  test-fsp.cpp
